修改package.json和personal-homepage/index.html,修复Vite

--- a/personal-homepage/index.html
+++ b/personal-homepage/index.html
@@ -1,13 +1,14 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>personal-homepage</title>
+    <title>Personal Homepage</title>
   </head>
   <body>
+    <!-- Vue 挂载容器：和 main.js 中的 #app 对应 -->
     <div id="app"></div>
+    <!-- 关键：引入 src 目录下的 main.js（type="module" 是 Vite 要求，不可省略） -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
