设置自定义favicon图标

--- a/personal-homepage/index.html
+++ b/personal-homepage/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Homepage</title>
+        <!-- 引入favicon（替换成你的图标文件名） -->
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   </head>
   <body>
     <!-- Vue 挂载容器：和 main.js 中的 #app 对应 -->
